src/objects/P7S1_PortalLogin__c.object
<CustomObject>
    <description>Informationen zur Verwaltung von Zugängen zu Portalen wie sevenonemedia.de und adfactory.de</description>
    <fields>
        <fullName>P7S1_AGB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zustimmung des Benutzers zu den AGB</description>
        <inlineHelpText>Zustimmung des Benutzers zu den AGB</inlineHelpText>
        <label>Zustimmung zu AGB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_AGB_akzeptiert_am__c</fullName>
        <description>Datum, an dem der Benutzer den AGB zugestimmt hat</description>
        <inlineHelpText>Datum, an dem der Benutzer den AGB zugestimmt hat</inlineHelpText>
        <label>AGB akzeptiert am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_ActivationLink__c</fullName>
        <description>Aktivierungslink für das Portal - wird in der E-Mail an den Kunden versendet</description>
        <inlineHelpText>Aktivierungslink für das Portal - wird in der E-Mail an den Kunden versendet</inlineHelpText>
        <label>Activation Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_Aktiviert_am__c</fullName>
        <description>Datum der Aktivierung durch P7S1 Mitarbeiter</description>
        <inlineHelpText>Datum der Aktivierung durch P7S1 Mitarbeiter</inlineHelpText>
        <label>Aktiviert am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Anrede__c</fullName>
        <description>Anrede des Benutzers</description>
        <inlineHelpText>Anrede des Benutzers</inlineHelpText>
        <label>Anrede</label>
        <picklist>
            <picklistValues>
                <fullName>Herr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frau</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Bereich__c</fullName>
        <description>Bereich des Benutzers</description>
        <inlineHelpText>Bereich des Benutzers</inlineHelpText>
        <label>Bereich</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Beschreibung__c</fullName>
        <description>Weitere Informationen und Hinweise</description>
        <inlineHelpText>Weitere Informationen und Hinweise</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Kontakt mit Zugang zum Portal</description>
        <inlineHelpText>Kontakt mit Zugang zum Portal</inlineHelpText>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Logins</relationshipLabel>
        <relationshipName>Portal_Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Deaktiviert_am__c</fullName>
        <description>Datum der letzten Deaktivierung</description>
        <inlineHelpText>Datum der letzten Deaktivierung</inlineHelpText>
        <label>Deaktiviert am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_DeleteConfirmLink__c</fullName>
        <label>Delete Confirm Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_EMail__c</fullName>
        <description>Registrierte E-Mail Adresse</description>
        <inlineHelpText>Registrierte E-Mail Adresse</inlineHelpText>
        <label>E-Mail Adresse</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P7S1_Emp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Zugehöriger Mitarbeiter, soweit der Kontakt ein Konzernmitglied ist.</description>
        <inlineHelpText>Zugehöriger Mitarbeiter, soweit der Kontakt ein Konzernmitglied ist.</inlineHelpText>
        <label>Mitarbeiter</label>
        <referenceTo>P7S1_Emp__c</referenceTo>
        <relationshipLabel>Portal Logins</relationshipLabel>
        <relationshipName>Portal_Logins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_Fax__c</fullName>
        <description>Faxnummer des Benutzers</description>
        <inlineHelpText>Faxnummer des Benutzers</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_Firma__c</fullName>
        <description>Firma des Benutzers</description>
        <inlineHelpText>Firma des Benutzers</inlineHelpText>
        <label>Firma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Funktion__c</fullName>
        <description>Funktion des Benutzers</description>
        <inlineHelpText>Funktion des Benutzers</inlineHelpText>
        <label>Funktion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Geburtstag__c</fullName>
        <label>Geburtstag</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_Geloescht_am__c</fullName>
        <description>Datum der Löschung des Portalzugangs</description>
        <inlineHelpText>Datum der Löschung des Portalzugangs</inlineHelpText>
        <label>Gelöscht am</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Hausnummer__c</fullName>
        <description>Hausnummer des Benutzers</description>
        <inlineHelpText>Hausnummer des Benutzers</inlineHelpText>
        <label>Hausnummer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Land__c</fullName>
        <description>Land des Benutzers</description>
        <inlineHelpText>Land des Benutzers</inlineHelpText>
        <label>Land</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LetzteAenderungKunde__c</fullName>
        <description>Zeigt an, wann der Kunde seine Daten das letzte Mal selbst angepasst hat.</description>
        <inlineHelpText>Zeigt an, wann der Kunde seine Daten das letzte Mal selbst angepasst hat.</inlineHelpText>
        <label>Letzte Änderung durch Kunde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_Mobil__c</fullName>
        <description>Mobiltelefonnummer des Benutzers</description>
        <inlineHelpText>Mobiltelefonnummer des Benutzers</inlineHelpText>
        <label>Mobil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_Nachname__c</fullName>
        <description>Nachname des Benutzers</description>
        <inlineHelpText>Nachname des Benutzers</inlineHelpText>
        <label>Nachname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_NewsletterSubscribeLink__c</fullName>
        <label>Newsletter Subscribe Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_Ort__c</fullName>
        <description>Ort des Benutzers</description>
        <inlineHelpText>Ort des Benutzers</inlineHelpText>
        <label>Ort</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_PortalId__c</fullName>
        <description>Id aus dem Portal zur Identifizierung des Logins</description>
        <externalId>true</externalId>
        <inlineHelpText>Id aus dem Portal zur Identifizierung des Logins</inlineHelpText>
        <label>Portal Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Portal_Status__c</fullName>
        <description>Status für das Portal</description>
        <inlineHelpText>Status für das Portal</inlineHelpText>
        <label>Portal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Neu</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Aktiv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gesperrt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gelöscht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liferay Aktiv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adfactory Aktiv</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Portal__c</fullName>
        <description>Auswahl des Portals für das der Zugang gilt</description>
        <inlineHelpText>Auswahl des Portals für das der Zugang gilt</inlineHelpText>
        <label>Portal</label>
        <picklist>
            <picklistValues>
                <fullName>sevenonemedia.de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sevenone-adfactory.de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sevenonemedia.ch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sevenonemedia.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Postleitzahl__c</fullName>
        <description>Postleitzahl des Benutzers</description>
        <inlineHelpText>Postleitzahl des Benutzers</inlineHelpText>
        <label>Postleitzahl</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Strasse__c</fullName>
        <description>Strasse des Benutzers</description>
        <inlineHelpText>Strasse des Benutzers</inlineHelpText>
        <label>Strasse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Telefon__c</fullName>
        <description>Nachname des Benutzers</description>
        <inlineHelpText>Nachname des Benutzers</inlineHelpText>
        <label>Telefon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>P7S1_Titel__c</fullName>
        <description>Titel des Benutzers</description>
        <inlineHelpText>Titel des Benutzers</inlineHelpText>
        <label>Titel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Unternehmensart__c</fullName>
        <description>Unternehmensart des Benutzers</description>
        <inlineHelpText>Unternehmensart des Benutzers</inlineHelpText>
        <label>Unternehmensart</label>
        <picklist>
            <picklistValues>
                <fullName>Mediaagentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbeagentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbungtreibender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P7S1_Vorname__c</fullName>
        <description>Vorname des Benutzers</description>
        <inlineHelpText>Vorname des Benutzers</inlineHelpText>
        <label>Vorname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Portal Login</label>
    <listViews>
        <fullName>AdF_AktuelleAenderung</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>P7S1_Nachname__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Portal__c</field>
            <operation>equals</operation>
            <value>sevenone-adfactory.de</value>
        </filters>
        <filters>
            <field>P7S1_LetzteAenderungKunde__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>AdFactory Aktuelle Änderung</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdF_User</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Vorname__c</columns>
        <columns>P7S1_Nachname__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Portal_Status__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Mobil__c</columns>
        <columns>P7S1_Postleitzahl__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Portal__c</field>
            <operation>equals</operation>
            <value>sevenone-adfactory.de</value>
        </filters>
        <label>AdFactory User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdF_UserLocked</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Vorname__c</columns>
        <columns>P7S1_Nachname__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Portal_Status__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Mobil__c</columns>
        <columns>P7S1_Postleitzahl__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Portal__c</field>
            <operation>equals</operation>
            <value>sevenone-adfactory.de</value>
        </filters>
        <filters>
            <field>P7S1_Portal_Status__c</field>
            <operation>equals</operation>
            <value>Neu,Gesperrt</value>
        </filters>
        <label>AdFactory Gesperrte User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Som_User</fullName>
        <columns>NAME</columns>
        <columns>P7S1_PortalId__c</columns>
        <columns>P7S1_Vorname__c</columns>
        <columns>P7S1_Nachname__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Portal_Status__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Mobil__c</columns>
        <columns>P7S1_Postleitzahl__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Portal__c</field>
            <operation>equals</operation>
            <value>sevenonemedia.de,sevenonemedia.ch,sevenonemedia.com</value>
        </filters>
        <label>Sevenone Media User</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Som_UserLocked</fullName>
        <columns>NAME</columns>
        <columns>P7S1_Vorname__c</columns>
        <columns>P7S1_Nachname__c</columns>
        <columns>P7S1_Firma__c</columns>
        <columns>P7S1_Portal_Status__c</columns>
        <columns>P7S1_EMail__c</columns>
        <columns>P7S1_Mobil__c</columns>
        <columns>P7S1_Postleitzahl__c</columns>
        <columns>P7S1_Ort__c</columns>
        <columns>P7S1_Contact__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Portal__c</field>
            <operation>equals</operation>
            <value>sevenonemedia.de,sevenonemedia.ch,sevenonemedia.com</value>
        </filters>
        <filters>
            <field>P7S1_Portal_Status__c</field>
            <operation>equals</operation>
            <value>Neu,Gesperrt</value>
        </filters>
        <label>Sevenone Media Gesperrte User</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Portal Login</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>